[build-system]
requires = ["setuptools>77.0.3", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tslearn"]
dynamic.version = {attr = "tslearn.__version__"}

[project]
name = "tslearn"
description= "A machine learning toolkit dedicated to time-series data"
authors = [
    {name="Romain Tavenard", email="romain.tavenard@univ-rennes2.fr"}
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "scikit-learn>=1.4",
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "numba>=0.58.1",
    "joblib>=1.2"
]

[project.urls]
documentation = "http://tslearn.readthedocs.io"
source = "https://github.com/tslearn-team/tslearn"
issues = "https://github.com/tslearn-team/tslearn/issues"
changelog = "https://github.com/tslearn-team/tslearn/CHANGELOG.md"

[project.optional-dependencies]
pytorch = ['torch']
tests = [
    "pytest", 
    "h5py"
]
docs = [
    "sphinx",
    "pydata_sphinx_theme",
    "sphinx-gallery",
    "sphinx_copybutton",
    "numpydoc",
    "matplotlib",
    "pypandoc",
]
all_features = [
    "torch",
    # Torch dropped support of macOS intel after version 2.2.2
    # which does not support numpy 2+
    "numpy<2; 'darwin' in sys_platform and 'x86_64' in platform_machine",
    "h5py",
    # Torch dropped support of macOS intel after version 2.2.2
    # which does not support keras 3.12+
    "keras<3.12; 'darwin' in sys_platform and 'x86_64' in platform_machine",
    "keras",
    "cesium",
    "pandas",
    "stumpy",
]

[tool.pytest.ini_options]
minversion = "7"
testpaths = [
    "tests",
    "tslearn"
]
# Suppress known benign upstream deprecation warnings to reduce noise in CI
filterwarnings = [
    "ignore:.*__array__ implementation doesn't accept a copy keyword.*:DeprecationWarning",
    "ignore:.*__array_wrap__ must accept context and return_scalar arguments.*:DeprecationWarning",
    "ignore:.*The default value for 'scale' is set to False.*:FutureWarning",
    # Ignore sklearn SVM n_iter_ informational warnings emitted by estimator_checks
    "ignore:.*n_iter_ is always set to 1 for TimeSeriesSVC.*:UserWarning",
    "ignore:.*n_iter_ is always set to 1 for TimeSeriesSVR.*:UserWarning",
    # Ignore sklearn confusion matrix single-label warnings used in tests
    "ignore:.*A single label was found in 'y_true' and 'y_pred'.*:UserWarning",
    # Ignore a small Cesium dataset warning in cast conversions
    "ignore:Cesium dataset could not be sorted.*:UserWarning",
    # Ignore convergence warnings from Scikit-learn MLP in tests
    "ignore:.*Stochastic Optimizer.*Maximum iterations.*:sklearn.exceptions.ConvergenceWarning",
    # Ignore scikit-learn stable_cumsum deprecation
    "ignore:Function stable_cumsum is deprecated.*:FutureWarning",
]
